# bearctl

./: .gitignore  bear.py  default.nix  flake.nix  functions.zsh  i3status.py  main.py  pa.py  pyproject.toml  setup.py  shell.nix  systemd.py  views.py
bear/: __init__.py  battery.py  bear.py  bluetooth.py  bluetooth.py.84b4d720f2907f5d0955533a46c8e554.py  director.py  dpms.py  dunst.py  eww.py  exceptions.py  i3.py  icons.py  load_average.py  lorri.py  main.py  main.py.28c24473f947b8d70cfcfffbba91cd21.py  monitor.py  music.py  network.py  notifications.py  poke.py  sway.py  systemd.py  top.py  transmission.py  utils.py  views.py  volume.py
bearctl/: bear.py  main.py  systemd.py
tests/: test_bear.py  test_bears.py  test_load_avg.py  test_monitor.py  test_multipoke.py  test_processes.py  test_proxypoke.py  test_snake2camel.py  test_utils.py
tests/battery/: test_monitor.py  test_notification.py
