[tool.poetry]
name = "bear"
version = "0.1.0"
description = "homtying an entire os"
authors = ["Robin Ramael <robin.ramael@gmail.com>"]

[tool.poetry.dependencies]
# python = "3.11"
click = "^8.1.6"
PyGObject = "^3.44.1"
dasbus = "^1.7"
notify2 = "^0.3.1"
pipewire_python = "0.2.3"
psutil = "5.9.8"
i3ipc = "2.2.1"
pulsectl = "23.5.2"
dataclasses-json = "0.6.4"
colorlog = "6.8.2"
humanize = "4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
pytest-sugar = "1.0.0"
pytest-random-order = "1.1.1"
lxml = "5.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bearctl = "bear.main:main"
