[project]
name = "bearctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12,>=3.11"
dependencies = [
    "click==8.2.1",
    "notify2==0.3.1",
    "psutil==7.1.2",
    "i3ipc==2.2.1",
    "pulsectl==24.12.0",
    "dataclasses-json==0.6.7",
    "colorlog==6.10.1",
    "dasbus==1.7",
    "humanize==4.12.3",
    "transmission-rpc==7.0.11"
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipython",
    "hupper",
    "pytest",
    "pytest-mock",
    "lxml"
]

[project.scripts]
bearctl = "bear:main.main"
